2002-09-12  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Fixed minor bug in BK_TIME_FORMAT_FLAG_NO_TZ.

2002-09-12  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_run.c (bk_run_set_dont_block_run_once): Add flag so that
	asynchronous events can cause the current bk_run_once() not to
	block, just as callers of bk_run_once() may with
	BK_RUN_ONCE_FLAG_DONT_BLOCK. 

2002-09-10  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_checkeventq): Don't allow bk_run_once to
	block if one or more events have fired in this iteration.

	* lib/b_bnbio.c (bk_iohh_bnbio_read): Allow time outs.
	(bnbio_set_timeout): Set/clear the timeout event.
	(bnbio_timeout): time out callback.
	(bk_iohh_bnbio_is_timedout): Is this bnbio struct in timeout state
	(bk_iohh_bnbio_is_canceled): Is this bnbio struct in cancelled state

2002-09-06  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): Allow non-printable
	characters in xml string (well it's really more of an xml-like string).

2002-09-05  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Added BK_TIME_FORMAT_FLAG_NO_TZ.

	* lib/b_run.c (bk_run_register_bnbio): 
	(bk_run_unregister_bnbio): 
	(bk_run_bnbio_cancel): Functions for managing blocking
	[-non-blocking] i/o so that blocking calls can be cancelled.

	* lib/b_bnbio.c (bk_iohh_bnbio_read, write): Check for new bnbio
	cancel flag.

2002-09-05  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_relay.c (bk_relay_ioh): Add BK_RELAY_IOH_DONTCLOSEFDS for
	various special purposes.
	(bk_relay_ioh): Add BNK_RELAY_IOH_NOSHUTDOWN for same

	* lib/b_config.c (bcf_create): You must specify that this is
	unordered.

	* lib/b_ioh.c (bk_ioh_close): You must specify that this is
	unordered.

	* lib/b_config.c (bcf_destroy): DLL might not be created yet

2002-09-04  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile (BK_LARGE_LIBSRC): add new b_strcode.c
